[tool.poetry]
name = "ncx-api"
version = "0.1.0"
description = ""
authors = ["Ethan Chapman <ethan.chapman0@outlook.com>"]
readme = "README.md"
packages = [{include = "ncx_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
cryptography = "^42.0.5"
python-gnupg = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

